--- a/pg1.html
+++ b/pg1.html
@@ -4,7 +4,7 @@
     <title>Zeta</title>
 </head>
 <body>
-    <h1>TEAM WINNER</h1>
-    <a href="pg1.html">NEXT</a>
+    <h1>Page 1 </h1>
+    <a href="pg2.html">NEXT</a>
 </body>
 </html
