--- a/pg2.html
+++ b/pg2.html
@@ -4,7 +4,6 @@
     <title>Zeta</title>
 </head>
 <body>
-    <h1>TEAM WINNER</h1>
-    <a href="pg1.html">NEXT</a>
+    <h1>Page 2</h1>
 </body>
 </html
