--- a/home.html
+++ b/home.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <head>
     <link rel="stylesheet" href="styles.css">
+    <script src="jscript.js"></script>
     <title>Zeta</title>
 </head>
 <body>
-    <h1>TEAM WINNER</h1>
-    <a href="pg1.html">NEXT</a>
+    <div class="intro">
+        <h1>WANT TO BECOME A MILLIONAIRE ?</h1>
+        <p><h2>Apply your knowledge in this Story and check out 
+            where you stand after 10 years. Also learn more about
+            Financial Literacy on the way and get aquainted with the 
+            real world knowledge, apply it and succeed in your goals.</h2></p>
+    <a href="pg0.html">NEXT</a>
+    <div id="dvLoading"></div>
+    </div>
+    
 </body>
 </html>
