homepage in progess

--- a/pg2.html
+++ b/pg2.html
@@ -4,6 +4,9 @@
     <title>Zeta</title>
 </head>
 <body>
+    <div class="loader hidden">
+        <h1>After 1 year</h1>
+    </div>
     <h1>Page 2</h1>
 </body>
 </html
