--- a/home.html
+++ b/home.html
@@ -61,9 +61,9 @@
         <div class="container1">
             <h1 class="font-weight-light" id="about"><strong>About</strong></h1>
             <p class="lead">Finlit is a story based learning amusement app for Financial Literacy .</p>
-            <p class="lead">The web application mainly focuses on various must know concepts for youth between ages 14-25 of Financial Literacy. The user gets to 
+            <p class="lead">The web application mainly focuses on various must know concepts for youth between ages 14-25 for Financial Literacy. The user gets to 
                 plays a real life scenario where after getting a job he is aquainted with the real world situations where he has to take decisions ranging from
-                meeting his monthly expenses, saving money for his future about borrowing money to fulfill his goals.    </p>
+                meeting his monthly expenses, saving money for his future, borrowing money to fulfill his goals.    </p>
             <p class="lead">On the way he is exposed to the complex and yet simple world of finance where, if he takes decisions with the right knowledge, life becomes much
                 simpler for his financial goals else he has to fall in the rat race. There are numerous concepts being covered about finance and income sources and the regular quotes from 
                 from the well-known peeple of this field and books like Rich Dad Poor Dad, keeps the user motivated to earn for the longer term and decide accordingly.</p>
