--- a/pg0.html
+++ b/pg0.html
@@ -69,6 +69,10 @@ a:hover{
     color: rgb(2, 85, 16);
     /* font-size:large; */
 }
+.name{
+    color:#fff;
+    background-color: black;
+}
 .name:hover +.hd {
     height: min-content;
     display: grid;
