--- a/html/pg0.html
+++ b/html/pg0.html
@@ -8,7 +8,7 @@
 		* { margin: 0; padding: 0; }
 		
 		html { 
-			background: url(t3.png) no-repeat center center fixed; 
+			background: url('img/t3.png') no-repeat center center fixed; 
 			-webkit-background-size: cover;
 			-moz-background-size: cover;
 			-o-background-size: cover;
@@ -96,7 +96,7 @@ a:hover{
             <div class="pro">
                 
                     <div class="img">
-                        <img src="DR-removebg-preview.png" alt="Doctor">
+                        <img src="img/DR-removebg-preview.png" alt="Doctor">
                     </div>
                     <div class="pro-info">
                         <p>
@@ -118,11 +118,11 @@ a:hover{
 	<div class="item">
 		<div class="pro">
 			<div class="img">
-				<img src="eng.PNG" alt="engineer">
+				<img src="img/eng.PNG" alt="engineer">
 			</div>
 			<div class="pro-info">
 				<ul>
-					<div class="name"><a href="pg1.html"><h2>Engineer</h2></a></div>
+					<div class="name"><a href="html/pg1.html"><h2>Engineer</h2></a></div>
 					<div class="hd">
 						<li>A person who designs, builds, or maintains engines, machines, or structures.</li>
 						<li>Avg salary= 60-70k/month</li>
@@ -138,7 +138,7 @@ a:hover{
 	<div class="item">
 		<div class="pro">
 			<div class="img">
-				<img src="businessman-removebg-preview.png" alt="businessman">
+				<img src="img/businessman-removebg-preview.png" alt="businessman">
 			</div>
 			<div class="pro-info">
 				<ul>
@@ -160,7 +160,7 @@ a:hover{
 	<div class="item"><!--content-->
 		<div class="pro">
 			<div class="img">
-				<img src="pol-removebg-preview.png" alt="police">
+				<img src="img/pol-removebg-preview.png" alt="police">
 			</div>
 			<div class="pro-info">
 				<ul>
