--- a/html/pg1.html
+++ b/html/pg1.html
@@ -13,7 +13,7 @@
     <style>
         .container{
             margin: 0;
-            background-image: url(t2.png);
+            background-image: url('img/t2.png');
             height: 1200px;
         }
         .wrapper{ opacity:0.8;width: 500px; margin: 50px auto; padding: 20px; background: white; -moz-box-shadow: 0 0 20px black; -webkit-box-shadow: 0 0 20px black; box-shadow: 0 0 20px black; }
