--- a/html/pg0.html
+++ b/html/pg0.html
@@ -101,10 +101,10 @@ a:hover{
                     <div class="pro-info">
                         <p>
                         <ul>
-                            <div class="name" id="dr"><a href="pg1.html"><h2>Doctor</h2></a></div>
+                            <div class="name" id="dr"><a href="pg1-dr.html"><h2>Doctor</h2></a></div>
                             <div class="hd">
                                 <li>The primary duty of all doctors is for the care and safety of patients.</li>
-                                <li>Avg income= approx. 2-3lakh/month</li>
+                                <li>Avg income= approx. 1-2 lakh/month</li>
                                 <li>Avg expenditure= 40-50k</li>
                                 <li>Financial Risk Criteria= Very Low</li>
                                 <li>Progress Speed = Medium</li>
@@ -122,7 +122,7 @@ a:hover{
 			</div>
 			<div class="pro-info">
 				<ul>
-					<div class="name"><a href="html/pg1.html"><h2>Engineer</h2></a></div>
+					<div class="name"><a href="pg1-eng.html"><h2>Engineer</h2></a></div>
 					<div class="hd">
 						<li>A person who designs, builds, or maintains engines, machines, or structures.</li>
 						<li>Avg salary= 60-70k/month</li>
@@ -142,7 +142,7 @@ a:hover{
 			</div>
 			<div class="pro-info">
 				<ul>
-					<div class="name"><a href="pg1.html"><h2>Businessman</h2></a></div>
+					<div class="name"><a href="pg1-busi.html"><h2>Businessman</h2></a></div>
 					<div class="hd">
 						<li>
 							A man who is skilful at dealing with money
@@ -164,7 +164,7 @@ a:hover{
 			</div>
 			<div class="pro-info">
 				<ul>
-					<div class="name"><a href="pg1.html"><h2>Police</h2></a></div>
+					<div class="name"><a href="pg1-pol.html"><h2>Police</h2></a></div>
 					<div class="hd">
 						<li>Job is to enforce laws, solve crimes and protect property</li>
 						<li>Avg salary= 30-35k/month</li>
