--- a/html/pg1-dr.html
+++ b/html/pg1-dr.html
@@ -11,12 +11,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Nothing+You+Could+Do&display=swap" rel="stylesheet">
     <title>Document--ishwar</title>
     <style>
+        body{
+            margin-left:5%;
+        }
         .container{
             margin: 0;
-            background-image: url('img/t2.png');
+            background-image: url(img/pg1-dr.jpg);
             height: 1200px;
         }
-        .wrapper{ opacity:0.8;width: 500px; margin: 50px auto; padding: 20px; background: white; -moz-box-shadow: 0 0 20px black; -webkit-box-shadow: 0 0 20px black; box-shadow: 0 0 20px black; }
+        .wrapper{ opacity:0.8;height:1300px;width: 550px; margin: 50px auto; padding: 20px; background: white; -moz-box-shadow: 0 0 20px black; -webkit-box-shadow: 0 0 20px black; box-shadow: 0 0 20px black; }
 
 
         /*content*/
@@ -45,7 +48,6 @@ img{
     height:250px;
     margin-top: 10px;
     padding-top: 20px;
-    
 }
 
 a:hover{
@@ -87,44 +89,70 @@ a:hover{
     font-family: serif;
 
 }
+.red{
+    color: red;
+}
+
+.green{
+    color: rgb(2, 85, 16);
+}
+.blue{
+    color:#0F044C;
+}
+.options{
+    color: #99154E;
+}
+h1{
+    border-bottom:1px solid black;
+    color: rgb(194, 166, 11);
+    font-family: Georgia;
+    text-align: center;
+}
+.ta{
+    /* background-color: #04009A; */
+    background-color: #F21170;
+    font-size: 20px;
+    padding: 8px;
+    border-radius: 10px;
+}
 </style>
 </head>
 
 <body>
     <div class="container"> <!--background image-->
         <div class="wrapper"><!--text box semi transparent-->
-            <h3 class="cursive">You have just graduated from your college and depending upon your profession you are
-                working for a company/ organisation or may be in a clinic if you are a doctor.... </h3> <br>
-            <h3 class="cursive1"> You start your new phase of life with full enthusiasm..</h3><br>
+            <h1>Congratulations!!!</h1>
+            <h3 class="cursive blue">You have just graduated from your college and officially you are now a doctor and ready to treat pateints. Now you are independent financially. </h3> <br>
+            <h3 class="cursive1"> You  start your new phase of life with full enthusiasm..</h3><br>
             <h3 class="normal">
                 <ul>            
-                <div class="open_button cursive">Here are your salary details</div>            
+                <div class="open_button cursive green">Here are your income details</div>            
                     <div class="hd">                        
-                        <li>Basic &nbsp &nbsp +Rs 45000 </li>
-                        <li>HRA &nbsp &nbsp +Rs 5000</li>
+                        <li>Basic &nbsp &nbsp +Rs 1lakh </li>
+                        <!-- <li>HRA &nbsp &nbsp +Rs 5000</li>
                         <li>DA &nbsp &nbsp +Rs 500</li>
                         <li>Providend Fund &nbsp -Rs 5000</li>
                         <li>Professional Tax &nbsp -Rs 4500</li>
-                        <li>Loan &nbsp&nbsp Rs 000</li> 
-                        <li>Total &nbsp&nbsp Rs 41000</li>                   
+                        <li>Loan &nbsp&nbsp Rs 000</li>  -->
+                        <li>Total &nbsp&nbsp Rs 1lakh</li>                   
                     </div> 
                     </ul>
             </h3>   <br>
             <h3 class="cursive1">You have many plans and goals for yourself and your family but you have monthly expenses
                 as well</h3> <br>
             <ul><h3 class="normal">                
-            <div class="open_button cursive">Here is the list of your monthly expenses</div>
+            <div class="open_button cursive red">Here is the list of your monthly expenses</div>
             <div class="hd">                        
-                <li>Basic &nbsp &nbsp +Rs 45000 </li>
-                <li>HRA &nbsp &nbsp +Rs 5000</li>
-                <li>DA &nbsp &nbsp +Rs 500</li>
-                <li>Providend Fund &nbsp -Rs 5000</li>
-                <li>Professional Tax &nbsp -Rs 4500</li>
-                <li>Loan &nbsp&nbsp Rs 000</li> 
-                <li>Total &nbsp&nbsp Rs 41000</li>                   
+                <li>Household  &nbsp &nbsp -Rs 25,000 </li>
+                <!-- <li>Staff salary &nbsp &nbsp -Rs 15000</li> -->
+                <!-- <li>DA &nbsp &nbsp +Rs 500</li> -->
+                <!-- <li>Providend Fund &nbsp -Rs 5000</li> -->
+                <li>Professional Tax &nbsp -Rs 15000</li>
+                <li>Loan &nbsp&nbsp Rs -30,000</li> 
+                <li>Total &nbsp&nbsp Rs 50,000</li>                   
             </div></h3> 
             </ul>  <br>
-            <h3 class="cursive1">Overall you have Rs 15000 in your hands, but you are confused as to whether you should invest it</h3>        
+            <h3 class="cursive1 green">Overall you have Rs 15k -25k as balance in your hands per month, but you are confused as to how you should invest it</h3>        
             <br><ul><h3 class="normal">                
                 <div class=" cursive">Here are the following options</div>
                 <div class="">                        
@@ -139,8 +167,8 @@ a:hover{
                 </ul>
 
                 <div class="text-center ">
-                    <h3 class="normal">
-                    <button type="button" class="open_button btn btn-dark"><a href="Investment.html">Take Advice</a></button>
+                    <h3 class="normal options">
+                    <button type="button" class="ta open_button btn btn-dark"><a href="Investment.html">Take Advice</a></button>
                         <div class="hd">                        
                             <li>What are Stocks and Stock Market? </li>
                             <li>What are Mutual Funds?</li>
