--- a/home.html
+++ b/home.html
@@ -24,7 +24,7 @@
         </ul></div>
     </nav>
     <header id="home"> 
-        <div id="indicators" class="carousel slide " data-ride="carousel" data-interval="5000">
+        <div id="indicators" class="carousel slide carousel-fade" data-ride="carousel" data-interval="5000">
             <ol class="carousel-indicators">
                 <li data-target="#indicators" data-slide-to="0" class="active"></li>
                 <li data-target="#indicators" data-slide-to="1" class=""></li>
