--- a/html/pg6.html
+++ b/html/pg6.html
@@ -168,7 +168,7 @@ h1{
                     </h3> 
                 </div><br><br>
                 <div class="text-center ">
-                <button type="button" class="btn btn-dark"><a href="last.html">NEXT</a></button>
+                <button type="button" class="btn btn-dark"><a href="pg7.html">NEXT</a></button>
                 </div>
 
         </div>
