--- a/html/pg2.html
+++ b/html/pg2.html
@@ -9,14 +9,14 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" 
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Nothing+You+Could+Do&display=swap" rel="stylesheet">
-    <title>Zeta-2</title>
+    <title>Zeta-1</title>
     <style>
         body{
             margin-left:5%;
         }
         .container{
             margin: 0;
-            background-image: url(img/pg1-dr.jpg);
+            background-image: url(img/pg1-po.jpg);
             height: 1200px;
         }
         .wrapper{ opacity:0.8;height:1300px;width: 550px; margin: 50px auto; padding: 20px; background: white; -moz-box-shadow: 0 0 20px black; -webkit-box-shadow: 0 0 20px black; box-shadow: 0 0 20px black; }
@@ -31,8 +31,6 @@ a:hover{
     color:chartreuse;
     text-decoration: none;
 }
-
-
 
 li{
     text-align: left;
@@ -89,6 +87,13 @@ a:hover{
     font-family: serif;
 
 }
+.ta{
+    background-color: #04009A;
+    font-size: 20px;
+    padding: 8px;
+    border-radius: 10px;
+}
+
 .red{
     color: red;
 }
@@ -108,13 +113,6 @@ h1{
     font-family: Georgia;
     text-align: center;
 }
-.ta{
-    /* background-color: #04009A; */
-    background-color: #F21170;
-    font-size: 20px;
-    padding: 8px;
-    border-radius: 10px;
-}
 </style>
 </head>
 
@@ -122,64 +120,47 @@ h1{
     <div class="container"> <!--background image-->
         <div class="wrapper"><!--text box semi transparent-->
             <h1>Congratulations!!!</h1>
-            <h3 class="cursive blue">You have just graduated from your college and officially you are now a doctor and ready to treat pateints. Now you are independent financially. </h3> <br>
-            <h3 class="cursive1"> You  start your new phase of life with full enthusiasm..</h3><br>
+            <h3 class="cursive blue">Its been an year that you have got a job/ started working.. </h3> <br>
+            <h3 class="cursive">You have started learning quite a bit about this professional and financial world </h3><br>
+            <h3 class="cursive1">You also got a 10% increment in your salary</h3><br>
             <h3 class="normal">
                 <ul>            
                 <div class="open_button cursive green">Here are your income details</div>            
                     <div class="hd">                        
-                        <li>Basic &nbsp &nbsp +Rs 1lakh </li>
-                        <!-- <li>HRA &nbsp &nbsp +Rs 5000</li>
+                        <li>Basic &nbsp &nbsp +Rs 45000 </li>
+                        <li>HRA &nbsp &nbsp +Rs 5500</li>
                         <li>DA &nbsp &nbsp +Rs 500</li>
-                        <li>Providend Fund &nbsp -Rs 5000</li>
-                        <li>Professional Tax &nbsp -Rs 4500</li>
-                        <li>Loan &nbsp&nbsp Rs 000</li>  -->
-                        <li>Total &nbsp&nbsp Rs 1lakh</li>                   
+                        <li>Providend Fund &nbsp -Rs 5000</li> 
+                        <li>Professional Tax &nbsp -Rs 4500</li> 
+                        <li>Loan &nbsp&nbsp Rs 000</li>  
+                        <li>Total &nbsp&nbsp Rs 42500</li>                   
                     </div> 
                     </ul>
             </h3>   <br>
-            <h3 class="cursive1">You have many plans and goals for yourself and your family but you have monthly expenses
-                as well</h3> <br>
-            <ul><h3 class="normal">                
-            <div class="open_button cursive red">Here is the list of your monthly expenses</div>
-            <div class="hd">                        
-                <li>Household  &nbsp &nbsp -Rs 25,000 </li>
-                <!-- <li>Staff salary &nbsp &nbsp -Rs 15000</li> -->
-                <!-- <li>DA &nbsp &nbsp +Rs 500</li> -->
-                <!-- <li>Providend Fund &nbsp -Rs 5000</li> -->
-                <li>Professional Tax &nbsp -Rs 15000</li>
-                <li>Loan &nbsp&nbsp Rs -30,000</li> 
-                <li>Total &nbsp&nbsp Rs 50,000</li>                   
-            </div></h3> 
-            </ul>  <br>
-            <h3 class="cursive1 green">Overall you have Rs 15k -25k as balance in your hands per month, but you are confused as to how you should invest it</h3>        
-            <br><ul><h3 class="normal">                
-                <div class=" cursive">Here are the following options</div>
-                <div class="">                        
-                    <li>Stocks </li>
-                    <li>Mutual Funds</li>
-                    <li>Fixed Deposits</li>
-                    <li>Recurring Deposits</li>
-                    <li>Gold</li>
-                    <li>Bank balance and in stocks</li> 
-                    <li>I would borrow some money to buy a bike for myself</li>                   
-                </div></h3> 
-                </ul>
+            <h3 class="cursive1 red">One thing you noticed is that the amount of tax being paid, which increases as your income increases. </h3> 
+            <div class="text-center ">
+                <button type="button" class="ta open_button btn btn-dark"><a href="Investment.html">How to avoid taxes?</a></button>            </div>
+            <br>            
+            <div class="open_button cursive1">Also since childhood you always wished to have your own car and a beautiful house.So you:</div>
+            <div class="hd"> 
+                <ul class="normal">                       
+                <!-- <li>Basic &nbsp &nbsp +Rs 45000 </li> -->
+                <li>Buy a car by taking credit from the bank @10% interest p.a</li>
+                <li>Use all your savings</li>    
+            </ul>            
+            <br>        
+            </div>
+            <div class="text-center ">
+                <button type="button" class="ta open_button btn btn-dark"><a href="Investment.html">Take Advice</a></button>            </div> 
+              <br>
+            <h3 class="cursive blue">So you decide not to buy a car now and save money and instead of getting upset you plan a small trip to Goa with your parents</h3>
+            <h3 class="cursive1 green">Overall you have Rs 15000-20000 in your hands and you keep on adding your investments.</h3>        
+            
+            
 
+              <br><br>
                 <div class="text-center ">
-                    <h3 class="normal options">
-                    <button type="button" class="ta open_button btn btn-dark"><a href="Investment.html">Take Advice</a></button>
-                        <div class="hd">                        
-                            <li>What are Stocks and Stock Market? </li>
-                            <li>What are Mutual Funds?</li>
-                            <li>What are Fixed Deposits?</li>
-                            <li>What are Recurring Deposits?</li>
-                            <li>Investing in Gold</li>            
-                        </div>
-                    </h3> 
-                </div><br><br>
-                <div class="text-center ">
-                <button type="button" class="btn btn-dark"><a href="pg2.html">NEXT</a></button>
+                <button type="button" class="btn btn-dark"><a href="pg3.html">NEXT</a></button>
                 </div>
 
         </div>
