--- a/html/pg4.html
+++ b/html/pg4.html
@@ -16,7 +16,8 @@
         }
         .container{
             margin: 0;
-            background-image: url(img/pg1-eng.jpg);
+            background-repeat: no-repeat;
+            background-image: url(img/img-5.png);
             height: 1200px;
         }
         .wrapper{ opacity:0.8;height:1200px;width: 550px; margin: 50px auto; padding: 20px; background: #f5eca8; -moz-box-shadow: 0 0 20px black; -webkit-box-shadow: 0 0 20px black; box-shadow: 0 0 20px black; }
