--- a/html/pg2.html
+++ b/html/pg2.html
@@ -9,17 +9,18 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" 
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Nothing+You+Could+Do&display=swap" rel="stylesheet">
-    <title>Zeta-1</title>
+    <title>Zeta-2</title>
     <style>
         body{
             margin-left:5%;
         }
         .container{
             margin: 0;
-            background-image: url(img/pg1-po.jpg);
+            background-image: url(img/img2.png);
             height: 1200px;
+            background-repeat: no-repeat;
         }
-        .wrapper{ opacity:0.8;height:1300px;width: 550px; margin: 50px auto; padding: 20px; background: white; -moz-box-shadow: 0 0 20px black; -webkit-box-shadow: 0 0 20px black; box-shadow: 0 0 20px black; }
+        .wrapper{ opacity:0.8;height:1200px;width: 550px; margin: 50px auto; padding: 20px; background: #f5eca8; -moz-box-shadow: 0 0 20px black; -webkit-box-shadow: 0 0 20px black; box-shadow: 0 0 20px black; }
 
 
         /*content*/
