--- a/html/pg3.html
+++ b/html/pg3.html
@@ -16,8 +16,9 @@
         }
         .container{
             margin: 0;
-            background-image: url(img/pg1-eng.jpg);
+            background-image: url(img/img1.png);
             height: 1200px;
+            background-repeat: no-repeat;
         }
         .wrapper{ opacity:0.8;height:1100px;width: 550px; margin: 50px auto; padding: 20px; background: #f5eca8; -moz-box-shadow: 0 0 20px black; -webkit-box-shadow: 0 0 20px black; box-shadow: 0 0 20px black; }
 
