--- a/html/pg6.html
+++ b/html/pg6.html
@@ -11,12 +11,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Nothing+You+Could+Do&display=swap" rel="stylesheet">
     <title>Zeta-6</title>
     <style>
+        
         body{
             margin-left:5%;
         }
         .container{
             margin: 0;
-            background-image: url(img/pg1-eng.jpg);
+            background-image: url(img/img3.png);
+            background-repeat: no-repeat;
             height: 1200px;
         }
         .wrapper{ opacity:0.8;height:1200px;width: 550px; margin: 50px auto; padding: 20px; background: #f5eca8; -moz-box-shadow: 0 0 20px black; -webkit-box-shadow: 0 0 20px black; box-shadow: 0 0 20px black; }
@@ -147,7 +149,7 @@ h1{
                 </h3>   <br>
             <h3 class="cursive1 green">You manage to save 40k-45k per month </h3>
              <br>
-            <h3 class="cursive1 blue">With enough cash in your bank accounnt and healthy investments, you finally decide to buy a car for yourself without borrowing. You manage the money by selling a part of your stocks.</h3> <br>
+            <h3 class="cursive1 blue">With enough cash in your bank account and healthy investments, you finally decide to buy a car for yourself without borrowing. You manage the money by selling a part of your stocks.</h3> <br>
    
             <ul><h3 class="normal">                
                 <div class=" cursive">Here we come near to conclusion:</div><br> 
@@ -168,7 +170,7 @@ h1{
                     </h3> 
                 </div><br><br>
                 <div class="text-center ">
-                <button type="button" class="btn btn-dark"><a href="pg7.html">NEXT</a></button>
+                <button type="button" class="btn btn-dark"><a href="last.html">NEXT</a></button>
                 </div>
 
         </div>
