--- a/html/last.html
+++ b/html/last.html
@@ -136,7 +136,7 @@ h1{
             <li>40 lacs to 60 lacs with monthly investment around 25k-35k</li>    
             </ul></h3>
             <h3 class="cursive1 name red">Unfavourable Situation with your stocks and other investments gaining and losing </h3>
-            <h3 class="hd">In this you can always withdraw or check with various financial experts, market trends or simply gaining knowledge can also help.
+            <h3 class="hd cursive1">In this you can always withdraw or check with various financial experts, market trends or simply gaining knowledge can also help.
             </ul></h3>
             <br><br>
             <h3 class="cursive blue">With so much of money in investments. You can definitely fulfill your dreams of buying a house or setting up a business and think of your retirement plans.</h3>
