--- a/html/pg2.html
+++ b/html/pg2.html
@@ -120,7 +120,7 @@ h1{
 <body>
     <div class="container"> <!--background image-->
         <div class="wrapper"><!--text box semi transparent-->
-            <h1>Congratulations!!!</h1>
+            <h1>In the beginning</h1>
             <h3 class="cursive blue">Its been an year that you have got a job/ started working.. </h3> <br>
             <h3 class="cursive">You have started learning quite a bit about this professional and financial world </h3><br>
             <h3 class="cursive1">You also got a 10% increment in your salary</h3><br>
