--- a/html/pg3.html
+++ b/html/pg3.html
@@ -135,7 +135,8 @@ h1{
                     </div> -->
                 </h3> 
             </div>
-            <h3 class="cursive blue">Last year was really wonderful one for you. </h3> <br>
+            <h3 class="cursive">So you are doing well only if you are able to beat the inflation rate with your investments.</h3>
+            <h3 class="cursive blue">Anyways Last year was really wonderful one for you. </h3> <br>
             <h3 class="cursive">
                 Decisions determine destiny.
             </h3><br>
