--- a/html/pg4.html
+++ b/html/pg4.html
@@ -122,7 +122,7 @@ h1{
 <body>
     <div class="container"> <!--background image-->
         <div class="wrapper"><!--text box semi transparent-->
-            <h1>Congratulations!!!</h1>
+            <h1>Planting a tree</h1>
 
             <h3 class="cursive blue">Here is how your differet assets have performed over the last year on an average</h3> <br><br>
             <h3 class="normal">
