--- a/home.html
+++ b/home.html
@@ -68,7 +68,7 @@
                 simpler for his financial goals else he has to fall in the rat race. There are numerous concepts being covered about finance and income sources and the regular quotes from 
                 from the well-known peeple of this field and books like Rich Dad Poor Dad, keeps the user motivated to earn for the longer term and decide accordingly.</p>
         <div class="center"><a href="html/pg0.html" class="button">LET'S BEGIN NOW</a> </div>  <!--next page-->
-        <div id="dvLoading"></div>    <!--pre loading for next page-->
+          <!--pre loading for next page-->
         </div>
         <div class="space"></div>
     
