--- a/html/pg0.html
+++ b/html/pg0.html
@@ -5,6 +5,7 @@
 <meta charset="UTF-8">
 <title>Atharva's page 1</title>
 <style>
+	
 		* { margin: 0; padding: 0; }
 		
 		html { 
@@ -89,6 +90,7 @@ a:hover{
 </style>
 </head>
 <body>
+<div id="dvLoading"> </div>  
 <div id="page-wrap">
 	<h1>Choose Your Profession</h1>
     <div class="container">
