--- a/html/pg1-pol.html
+++ b/html/pg1-pol.html
@@ -167,7 +167,7 @@ h1{
 
                 <div class="text-center ">
                     <h3 class="normal options">
-                    <button type="button" class="ta open_button btn btn-dark"><a href="Investment.html">Take Advice</a></button>
+                    <button type="button" class="ta open_button btn btn-dark"><a href="Investment.html#inv-opt">Take Advice</a></button>
                         <div class="hd">                        
                             <li>What are Stocks and Stock Market? </li>
                             <li>What are Mutual Funds?</li>
