--- a/html/last.html
+++ b/html/last.html
@@ -17,7 +17,7 @@
         }
         .container{
             margin: 0;
-            background-image: url(img/f2.jpg);
+            background-image: url(img/img-6.png);
             background-repeat: no-repeat;
             height: 1200px;
         }
