--- a/html/pg2.html
+++ b/html/pg2.html
@@ -140,7 +140,7 @@ h1{
             </h3>   <br>
             <h3 class="cursive1 red">One thing you noticed is that the amount of tax being paid, which increases as your income increases. </h3> 
             <div class="text-center ">
-                <button type="button" class="ta open_button btn btn-dark"><a href="Investment.html">How to avoid taxes?</a></button>            </div>
+                <button type="button" class="ta open_button btn btn-dark"><a href="Investment.html#add">How to avoid taxes?</a></button>            </div>
             <br>            
             <div class="open_button cursive1">Also since childhood you always wished to have your own car and a beautiful house.So you:</div>
             <div class="hd"> 
@@ -152,7 +152,7 @@ h1{
             <br>        
             </div>
             <div class="text-center ">
-                <button type="button" class="ta open_button btn btn-dark"><a href="Investment.html">Take Advice</a></button>            </div> 
+                <button type="button" class="ta open_button btn btn-dark"><a href="Investment.html#fin-lit">Take Advice</a></button>            </div> 
               <br>
             <h3 class="cursive blue">So you decide not to buy a car now and save money and instead of getting upset you plan a small trip to Goa with your parents</h3>
             <h3 class="cursive1 green">Overall you have Rs 15000-20000 in your hands and you keep on adding your investments.</h3>        
