--- a/html/pg3.html
+++ b/html/pg3.html
@@ -125,7 +125,7 @@ h1{
             <h1>Wonderful!!!</h1>
             <div class="text-center ">
                 <h3 class="normal options">
-                <button type="button" class="ta open_button btn btn-dark"><a href="Investment.html">What is Inflation ?</a></button>
+                <button type="button" class="ta open_button btn btn-dark"><a href="Investment.html#basic">What is Inflation ?</a></button>
                     <!-- <div class="hd">                        
                         <li>What are Stocks and Stock Market? </li>
                         <li>What are Mutual Funds?</li>
