only animation remains

--- a/html/pg0.html
+++ b/html/pg0.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Atharva's page 1</title>
+<title>Zeta-0</title>
 <style>
 	
 		* { margin: 0; padding: 0; }
