--- a/html/pg4.html
+++ b/html/pg4.html
@@ -166,7 +166,7 @@ h1{
                 
 
                 <div class="text-center">
-                <button type="button" class="ta open_button btn btn-dark"><a href="Investment.html">What is SIP</a></button>
+                <button type="button" class="ta open_button btn btn-dark"><a href="Investment.html#basic">What is SIP</a></button>
                     <!--<div class="hd">                        
                         <li style="font-size: 25px; color:black; margin-left: 100px;">What is SIP</li>
                     </div>-->
@@ -179,13 +179,9 @@ h1{
                 <div class="text-center ">
                     <h3 class="normal options">
                     <button type="button" class="ta open_button btn btn-dark"><a href="Investment.html">What is NetWorth</a></button>
-                        <!--<div class="hd">                        
-                            <li>What are Stocks and Stock Market? </li>
-                            <li>What are Mutual Funds?</li>
-                            <li>What are Fixed Deposits?</li>
-                            <li>What are Recurring Deposits?</li>
-                            <li>Investing in Gold</li>            
-                        </div>-->
+                        <div class="hd cursive">                        
+                            the total wealth of an individual, company, or household, taking account of all financial assets and liabilities.     
+                        </div>
                     </h3> 
                 </div><br><br>
                 <div class="text-center ">
