--- a/html/pg6.html
+++ b/html/pg6.html
@@ -144,7 +144,10 @@ h1{
                     <div class="text-center ">
                         <h3 class="normal options">
                         <button type="button" class="ta open_button btn btn-dark"><a href="Investment.html">What is Portfolio?</a></button>
-                        </h3> 
+                        <div class="hd cursive">                        
+                            A portfolio is a collection of financial investments like stocks, bonds, commodities, cash, and cash equivalents, including closed-end funds
+                        </div>
+                    </h3> 
                     </div>
                 </h3>   <br>
             <h3 class="cursive1 green">You manage to save 40k-45k per month </h3>
@@ -166,7 +169,7 @@ h1{
 
                 <div class="text-center ">
                     <h3 class="normal options">
-                    <button type="button" class="ta open_button btn btn-dark"><a href="Investment.html">Famous People</a></button>
+                    <button type="button" class="ta open_button btn btn-dark"><a href="Investment.html#famous">Famous People</a></button>
                     </h3> 
                 </div><br><br>
                 <div class="text-center ">
