--- a/html/pg2.html
+++ b/html/pg2.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script src="jscript.js"></script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -114,10 +115,49 @@ h1{
     font-family: Georgia;
     text-align: center;
 }
+
+/*-------------------------------------------------------------------*/
+.loader {
+    position: fixed;
+    z-index: 99;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.loader > img {
+    width: 100px;
+}
+
+.loader.hidden {
+    animation: fadeOut 4s;
+    animation-fill-mode: forwards;
+}
+
+@keyframes fadeOut {
+    100% {
+        opacity: 0;
+        visibility: hidden;
+    }
+}
+
+.thumb {
+    height: 100px;
+    border: 1px solid black;
+    margin: 10px;
+}
 </style>
 </head>
 
 <body>
+    <div class="loader">
+        <div class="cursive">After 1 year..</div>
+        </div>
     <div class="container"> <!--background image-->
         <div class="wrapper"><!--text box semi transparent-->
             <h1>In the beginning</h1>
