--- a/html/pg4.html
+++ b/html/pg4.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script src="jscript.js"></script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,6 +12,41 @@
     <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Nothing+You+Could+Do&display=swap" rel="stylesheet">
     <title>Zeta-4</title>
     <style>
+        /*-------------------------------------------------------------------*/
+.loader {
+    position: fixed;
+    z-index: 99;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.loader > img {
+    width: 100px;
+}
+
+.loader.hidden {
+    animation: fadeOut 4s;
+    animation-fill-mode: forwards;
+}
+
+@keyframes fadeOut {
+    100% {
+        opacity: 0;
+        visibility: hidden;
+    }
+}
+
+.thumb {
+    height: 100px;
+    border: 1px solid black;
+    margin: 10px;
+}
         body{
             margin-left:5%;
         }
@@ -120,6 +156,9 @@ h1{
 </head>
 
 <body>
+    <div class="loader">
+        <div class="cursive">After 1 year..Inflation rate for the year was 6%</div>
+    </div>
     <div class="container"> <!--background image-->
         <div class="wrapper"><!--text box semi transparent-->
             <h1>Planting a tree</h1>
