--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <li class="nav-item"> <a href="#home" class="nav-link">HOME</a> </li>
                 <li class="nav-item"> <a href="#about" class="nav-link">ABOUT</a> </li>
                 <li class="nav-item"> <a href="#contact" class="nav-link">CONTACT</a> </li>
+                <li class="nav-item"> <a href="#contact" class="nav-link">REGISTER</a> </li>
         </ul></div>
     </nav>
     <header id="home"> 
