--- a/html/index.html
+++ b/html/index.html
@@ -22,8 +22,13 @@
                 <li class="nav-item"> <a href="#home" class="nav-link">HOME</a> </li>
                 <li class="nav-item"> <a href="#about" class="nav-link">ABOUT</a> </li>
                 <li class="nav-item"> <a href="#contact" class="nav-link">CONTACT</a> </li>
+                {% if user.is_authenticated %}
+                <li class="nav-item"> <a href="logout" class="nav-link">LOG OUT</a> </li>
+                <li class="nav-link" style="text-decoration:underline">Hello, {{user.username}}</li>
+                {% else %}
                 <li class="nav-item"> <a href="register" class="nav-link">REGISTER</a> </li>
-                <li class="nav-item"> <a href="#contact" class="nav-link">LOG IN</a> </li>
+                <li class="nav-item"> <a href="login" class="nav-link">LOG IN</a> </li>
+                {% endif %}
         </ul></div>
     </nav>
     <header id="home"> 
@@ -55,6 +60,8 @@
                 </div>
             </div> <a class="carousel-control-prev" href="#indicators" role="button" data-slide="prev"> <span class="carousel-control-prev-icon" aria-hidden="true"></span> <span class="sr-only">Previous</span> </a> <a class="carousel-control-next" href="#indicators" role="button" data-slide="next"> <span class="carousel-control-next-icon" aria-hidden="true"></span> <span class="sr-only">Next</span> </a>
         </div>
+
+    
         <div ><a href="{% static 'pg0.html' %}" class="button1">CLICK TO BEGIN YOUR JOURNEY</a></div>
     </header>
     <!-- Page Content -->
