--- a/finlit/assets/index.html
+++ b/finlit/assets/index.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zeta</title>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="{% static 'styles.css' %}">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
@@ -21,8 +22,13 @@
                 <li class="nav-item"> <a href="#home" class="nav-link">HOME</a> </li>
                 <li class="nav-item"> <a href="#about" class="nav-link">ABOUT</a> </li>
                 <li class="nav-item"> <a href="#contact" class="nav-link">CONTACT</a> </li>
-                <li class="nav-item"> <a href="accounts/register" class="nav-link">REGISTER</a> </li>
-                <li class="nav-item"> <a href="#contact" class="nav-link">LOG IN</a> </li>
+                {% if user.is_authenticated %}
+                <li class="nav-item"> <a href="logout" class="nav-link">LOG OUT</a> </li>
+                <li class="nav-link" style="text-decoration:underline">Hello, {{user.username}}</li>
+                {% else %}
+                <li class="nav-item"> <a href="register" class="nav-link">REGISTER</a> </li>
+                <li class="nav-item"> <a href="login" class="nav-link">LOG IN</a> </li>
+                {% endif %}
         </ul></div>
     </nav>
     <header id="home"> 
@@ -34,19 +40,19 @@
             </ol>
             <div class="carousel-inner" role="listbox">
                 <!-- Slide One - Set the background image for this slide in the line below -->
-                <div class="carousel-item active" style="background-image: url('img/f5.jpg')">
+                <div class="carousel-item active" style="background-image: url('{% static 'img/f5.jpg' %}')">
                     <div class="carousel-caption d-none d-md-block">
                         <h3 class="display-4">BUILD YOUR FINANCIAL FUTURE</h3>
                         <p class="lead1">Check out where you stand after 10 years.</p>
                     </div>
                 </div> <!-- Slide Two - Set the background image for this slide in the line below -->
-                <div class="carousel-item " style="background-image:url('img/f3.jpg')"> 
+                <div class="carousel-item " style="background-image:url('{% static 'img/f3.jpg' %}')"> 
                     <div class="carousel-caption d-none d-md-block">
                         <h3 class="display-4">Apply your knowledge in this Interesting Story</h3>
                         <p class="lead1">Learn more about Financial Literacy on the way</p>
                     </div>
                 </div> <!-- Slide Three - Set the background image for this slide in the line below -->
-                <div class="carousel-item" style="background-image: url('img/f4.jpg')">
+                <div class="carousel-item" style="background-image: url('{% static 'img/f4.jpg' %}')">
                     <div class="carousel-caption d-none d-md-block">
                         <h3 class="display-4">Succeed in your goals </h3>
                         <p class="lead1">in your real life as well</p>
@@ -54,7 +60,9 @@
                 </div>
             </div> <a class="carousel-control-prev" href="#indicators" role="button" data-slide="prev"> <span class="carousel-control-prev-icon" aria-hidden="true"></span> <span class="sr-only">Previous</span> </a> <a class="carousel-control-next" href="#indicators" role="button" data-slide="next"> <span class="carousel-control-next-icon" aria-hidden="true"></span> <span class="sr-only">Next</span> </a>
         </div>
-        <div ><a href="pg0.html" class="button1">CLICK TO BEGIN YOUR JOURNEY</a></div>
+
+    
+        <div ><a href="start" class="button1">CLICK TO BEGIN YOUR JOURNEY</a></div>
     </header>
     <!-- Page Content -->
     <section class="py-5">
@@ -69,7 +77,7 @@
             <p class="lead">On the way he is exposed to the complex and yet simple world of finance where, if he takes decisions with the right knowledge, life becomes much
                 simpler for his financial goals else he has to fall in the rat race. There are numerous concepts being covered about finance and income sources and the regular quotes from 
                 from the well-known peeple of this field and books like Rich Dad Poor Dad, keeps the user motivated to earn for the longer term and decide accordingly.</p>
-        <div class="center"><a href="pg0.html" class="button">LET'S BEGIN NOW</a> </div>  <!--next page-->
+        <div class="center"><a href="start" class="button">LET'S BEGIN NOW</a> </div>  <!--next page-->
           <!--pre loading for next page-->
         </div>
         <div class="space"></div>
