--- a/html/index.html
+++ b/html/index.html
@@ -62,7 +62,7 @@
         </div>
 
     
-        <div ><a href="{% static 'pg0.html' %}" class="button1">CLICK TO BEGIN YOUR JOURNEY</a></div>
+        <div ><a href="start" class="button1">CLICK TO BEGIN YOUR JOURNEY</a></div>
     </header>
     <!-- Page Content -->
     <section class="py-5">
@@ -77,14 +77,14 @@
             <p class="lead">On the way he is exposed to the complex and yet simple world of finance where, if he takes decisions with the right knowledge, life becomes much
                 simpler for his financial goals else he has to fall in the rat race. There are numerous concepts being covered about finance and income sources and the regular quotes from 
                 from the well-known peeple of this field and books like Rich Dad Poor Dad, keeps the user motivated to earn for the longer term and decide accordingly.</p>
-        <div class="center"><a href="{% static 'pg0.html'%}" class="button">LET'S BEGIN NOW</a> </div>  <!--next page-->
+        <div class="center"><a href="start" class="button">LET'S BEGIN NOW</a> </div>  <!--next page-->
           <!--pre loading for next page-->
         </div>
         <div class="space"></div>
     
         <div class="container2" >
             <h1 class="font-weight-light" id="contact">Get in touch with us</h1>
-            <p class="lead">The webapp is being developed by team Titans. Following are our members.<br><ul class="lead"><li>Shivam Bunge</li><li>Atharva Borawake</li><li>Ishwar Shelke</li><li>Sanskar Mundra</li></ul></p>
+            <p class="lead">The webapp is being developed by team Titans. Following are our members.<br><ul class="lead"><li>Shivam Bunge</li><li>Atharva Borawake</li><li>Sanskar Mundra</li></ul></p>
             <p class="lead">Reach us<br>shivambunge9898@gmail.com<br>borawakeatharva2002@gmail.com</p>
         </div>
     </section>
