--- a/html/pg1-busi.html
+++ b/html/pg1-busi.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -16,7 +17,7 @@
         }
         .container{
             margin: 0;
-            background-image: url(img/pg1-busi.jpg);
+            background-image: url("{% static 'img/pg1-busi.jpg' %}");
             height: 1200px;
         }
         .wrapper{ opacity:0.8;height:1200px;width: 550px; margin: 50px auto; padding: 20px; background: #f5eca8; -moz-box-shadow: 0 0 20px black; -webkit-box-shadow: 0 0 20px black; box-shadow: 0 0 20px black; }
