--- a/html/pg1-dr.html
+++ b/html/pg1-dr.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -16,7 +17,7 @@
         }
         .container{
             margin: 0;
-            background-image: url(img/pg1-dr.jpg);
+            background-image: url({% static 'img/pg1-dr.jpg' %});
             height: 1200px;
         }
         .wrapper{ opacity:0.8;height:1300px;width: 550px; margin: 50px auto; padding: 20px; background: white; -moz-box-shadow: 0 0 20px black; -webkit-box-shadow: 0 0 20px black; box-shadow: 0 0 20px black; }
@@ -142,15 +143,18 @@ h1{
                 as well</h3> <br>
             <ul><h3 class="normal">                
             <div class="open_button cursive red">Here is the list of your monthly expenses</div>
+            {% for job in jobs %}
             <div class="hd">                        
                 <li>Household  &nbsp &nbsp -Rs 25,000 </li>
                 <!-- <li>Staff salary &nbsp &nbsp -Rs 15000</li> -->
                 <!-- <li>DA &nbsp &nbsp +Rs 500</li> -->
                 <!-- <li>Providend Fund &nbsp -Rs 5000</li> -->
                 <li>Professional Tax &nbsp -Rs 15000</li>
-                <li>Loan &nbsp&nbsp Rs -30,000</li> 
+                <li>Loan &nbsp&nbsp Rs -{{job.loans}}</li> 
                 <li>Total &nbsp&nbsp Rs 50,000</li>                   
-            </div></h3> 
+            </div>
+            {% endfor %}
+            </h3> 
             </ul>  <br>
             <h3 class="cursive1 green">Overall you have Rs 15k -25k as balance in your hands per month, but you are confused as to how you should invest it</h3>        
             <br><ul><h3 class="normal">                
@@ -179,7 +183,7 @@ h1{
                     </h3> 
                 </div><br><br>
                 <div class="text-center ">
-                <button type="button" class="btn btn-dark"><a href="pg2.html">NEXT</a></button>
+                <button type="button" class="btn btn-dark"><a href="{% static 'pg2.html' %}">NEXT</a></button>
                 </div>
 
         </div>
