--- a/html/pg1-pol.html
+++ b/html/pg1-pol.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -16,7 +17,7 @@
         }
         .container{
             margin: 0;
-            background-image: url(img/pg1-po.jpg);
+            background-image: url("{% static 'img/pg1-po.jpg' %}");
             height: 1200px;
         }
         .wrapper{ opacity:0.8;height:1300px;width: 550px; margin: 50px auto; padding: 20px; background: white; -moz-box-shadow: 0 0 20px black; -webkit-box-shadow: 0 0 20px black; box-shadow: 0 0 20px black; }
@@ -141,15 +142,18 @@ h1{
                 as well</h3> <br>
             <ul><h3 class="normal">                
             <div class="open_button cursive red">Here is the list of your monthly expenses</div>
+            {% for job in jobs %}
             <div class="hd">                        
                 <!-- <li>Basic &nbsp &nbsp +Rs 45000 </li> -->
                 <li>Providend Fund &nbsp -Rs 5000</li>
                 <li>Professional Tax &nbsp -Rs 2500</li>
-                <li>Loan &nbsp&nbsp -Rs 8,000</li> 
+                <li>Loan &nbsp&nbsp -Rs {{job.loans}}</li> 
                 <li>PF &nbsp &nbsp -Rs 5000</li>
                 <li>Other expenses &nbsp &nbsp +Rs 5500</li>
                 <li>Total &nbsp&nbsp Rs 15,000 </li>                   
-            </div></h3> 
+            </div>
+            {% endfor %}
+            </h3> 
             </ul>  <br>
             <h3 class="cursive1 green">Overall you have Rs 15000-20000 in your hands, but you are confused as to how you should invest it</h3>        
             <br><ul><h3 class="normal">                
