--- a/html/Investment.html
+++ b/html/Investment.html
@@ -1,5 +1,6 @@
+{% load static %}
 <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
-<link href = "investment1.css" rel = "stylesheet" type = "text/css" >
+<link href = "{% static 'investment1.css' %}" rel = "stylesheet" type = "text/css" >
 <div class="wrapper">
     <div class="sidebar">
         <h2>More</h2>
@@ -15,11 +16,17 @@
     <div class="main_content">
         <div class="header" id="fin-lit"><h1>• What is Financial literacy?<h1></div>  
             <div >Financial literacy is the possession of the set of skills and knowledge that allows an individual to make informed and effective decisions with all of their financial resources.</div>
+            <div class="vid">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/snBdbnI-8JM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
         <div class="header"><h1>• What is need of Financial literacy?<h1></div>
             <div>Financial planning is a step-by-step approach to meet one’s life goals. A financial plan acts as a guide as you go through life’s journey. Essentially, it helps you be in control of your income, expenses and investments such that you can manage your money and achieve your goals.</div> 
         <div class="header" id="basic"><h1>• Basic Terminology<h1></div>
         <div class="header"><h2>1) What is inflation rate?<h2></div>
             <div> Inflation meaning: Inflation refers to the rise in the prices of most goods and services of daily or common use, such as food, clothing, housing etc.</div>
+            <div class="vid">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/cUjc896jePY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
         <div class="header"><h2>2) What is compound interest?<h2></div>
             <div>Compound interest is the addition of interest to the principal sum of a loan or deposit, or in other words, interest on interest. It is the result of reinvesting interest, rather than paying it out, so that interest in the next period is then earned on the principal sum plus previously accumulated interest.</div>
         <div class="header"><h2>3) What is asset and liability?<h2></div>
