--- a/html/pg0.html
+++ b/html/pg0.html
@@ -17,7 +17,7 @@
 			background-size: cover;
 		}
 		
-		#page-wrap { opacity:0.8;height:1500px; width: 500px; margin: 50px auto; padding: 20px; background: white; -moz-box-shadow: 0 0 20px black; -webkit-box-shadow: 0 0 20px black; box-shadow: 0 0 20px black; }
+		#page-wrap { opacity:0.8;height:1500px; width: 500px; margin: 50px auto; padding: 20px; background: white; -moz-box-shadow: 0 0 20px black; -webkit-box-shadow: 0 0 20px black; box-shadow: 0 0 20px black;text-align: center; }
 		p { font: 15px/2 Georgia, Serif; margin: 0 0 30px 0; text-indent: 40px; }
 
 
@@ -85,8 +85,12 @@ a:hover{
 }
 .name:hover +.hd {
     height: min-content;
-    display: grid;
-    
+    display:grid;
+}
+
+.item{
+	display: flex;
+	justify-content: center;
 }
 </style>
 </head>
@@ -127,67 +131,7 @@ a:hover{
             </div>
         </div>
 		{% endfor %}
-	<!-- <div class="item">
-		<div class="pro">
-			<div class="img">
-				<img src="{% static 'img/eng.PNG' %}" alt="engineer">
-			</div>
-			<div class="pro-info">
-				<ul>
-					<div class="name"><a href="{% static 'pg1-eng.html' %}"><h2>Engineer</h2></a></div>
-					<div class="hd">
-						<li>A person who designs, builds, or maintains engines, machines, or structures.</li>
-						<li>Avg salary= 60-70k/month</li>
-						<li>Avg expenditure= 25-30k/month</li>
-						<li>Financial Risk Criteria= Low</li>
-						<li>Progress Speed = Medium</li>
-					</div>
-				</ul>
-			</div>
-		</div>
-	</div>
-
-	<div class="item">
-		<div class="pro">
-			<div class="img">
-				<img src="{% static 'img/businessman-removebg-preview.png' %}" alt="businessman">
-			</div>
-			<div class="pro-info">
-				<ul>
-					<div class="name"><a href="{% static 'pg1-busi.html' %}"><h2>Businessman</h2></a></div>
-					<div class="hd">
-						<li>
-							A man who is skilful at dealing with money
-						</li>
-						<li>Avg Income= 1 lakh/month</li>
-						<li>Avg expenditure= 30-40k</li>
-						<li>Financial Risk Criteria= Very High</li>
-						<li>Progress Speed = High</li>
-						
-					</div>
-				</ul>
-			</div>
-		</div>
-	</div> -->
-	<!-- <div class="item">content
-		<div class="pro">
-			<div class="img">
-				<img src="{% static 'img/pol-removebg-preview.png' %}" alt="police">
-			</div>
-			<div class="pro-info">
-				<ul>
-					<div class="name"><a href="{% static 'pg1-pol.html' %}"><h2>Police</h2></a></div>
-					<div class="hd">
-						<li>Job is to enforce laws, solve crimes and protect property</li>
-						<li>Avg salary= 30-35k/month</li>
-						<li>Avg expenditure= 10-15k</li>
-						<li>Financial Risk Criteria= Very Low</li>
-						<li>Progress Speed = low</li>
-					</div>
-				</ul>
-			</div>
-		</div>
-	</div> -->
+	
 </div>
 <style type="text/css" style="display: none !important;">
 	* {
