--- a/html/pg1-busi.html
+++ b/html/pg1-busi.html
@@ -14,13 +14,14 @@
     <style>
         body{
             margin-left:5%;
+            
         }
         .container{
             margin: 0;
             background-image: url("{% static 'img/pg1-busi.jpg' %}");
             height: 1200px;
         }
-        .wrapper{ opacity:0.8;height:1200px;width: 550px; margin: 50px auto; padding: 20px; background: #f5eca8; -moz-box-shadow: 0 0 20px black; -webkit-box-shadow: 0 0 20px black; box-shadow: 0 0 20px black; }
+        .wrapper{ opacity:0.8;height:max-content;width: 550px; margin: 50px auto; padding: 20px; background: #f5eca8; -moz-box-shadow: 0 0 20px black; -webkit-box-shadow: 0 0 20px black; box-shadow: 0 0 20px black;}
 
 
         /*content*/
@@ -173,7 +174,10 @@ h1{
 
                 <div class="text-center ">
                     <h3 class="normal ">
-                    <button type="button" class="ta open_button btn btn-dark"><a href="Investment.html#inv-opt">Take Advice</a></button>
+                        <form action="prof_ch/advice" method="POST">
+                            {% csrf_token %}
+                            <input type="submit" value="advice" name="advice">
+                        </form>
                         <div class="hd options">                        
                             <li>What are Stocks and Stock Market? </li>
                             <li>What are Mutual Funds?</li>
@@ -183,8 +187,11 @@ h1{
                         </div>
                     </h3> 
                 </div><br><br>
-                <div class="text-center ">
-                <button type="button" class="btn btn-dark"><a href="pg2.html">NEXT</a></button>
+                <div class="text-center">
+                    <form action="prof_ch/invest" method="POST">
+                        {% csrf_token %}
+                        <input type="submit" value="Invest" name="invest">
+                    </form>
                 </div>
 
         </div>
