--- a/html/pg1-eng.html
+++ b/html/pg1-eng.html
@@ -172,7 +172,10 @@ h1{
 
                 <div class="text-center ">
                     <h3 class="normal options">
-                    <button type="button" class="ta open_button btn btn-dark"><a href="Investment.html#inv-opt">Take Advice</a></button>
+                        <form action="prof_ch/advice" method="POST">
+                            {% csrf_token %}
+                            <input type="submit" value="advice" name="advice">
+                        </form>
                         <div class="hd">                        
                             <li>What are Stocks and Stock Market? </li>
                             <li>What are Mutual Funds?</li>
@@ -182,8 +185,11 @@ h1{
                         </div>
                     </h3> 
                 </div><br><br>
-                <div class="text-center ">
-                <button type="button" class="btn btn-dark"><a href="pg2.html">NEXT</a></button>
+                <div class="text-center">
+                    <form action="prof_ch/invest" method="POST">
+                        {% csrf_token %}
+                        <input type="submit" value="Invest" name="invest">
+                    </form>
                 </div>
 
         </div>
