--- a/html/pg6.html
+++ b/html/pg6.html
@@ -1,7 +1,8 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script src="jscript.js"></script>
+    <script src="{% static 'jscript.js' %}"></script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -50,14 +51,16 @@
         
         body{
             margin-left:5%;
+            display: flex;
+            justify-content: center;
         }
         .container{
             margin: 0;
-            background-image: url(img/img3.png);
+            background-image: url("{% static 'img/img3.png' %}");
             background-repeat: no-repeat;
             height: 1200px;
         }
-        .wrapper{ opacity:0.8;height:1200px;width: 550px; margin: 50px auto; padding: 20px; background: #f5eca8; -moz-box-shadow: 0 0 20px black; -webkit-box-shadow: 0 0 20px black; box-shadow: 0 0 20px black; }
+        .wrapper{ opacity:0.8;height:max-content;width: 550px; margin: 50px auto; padding: 20px; background: #f5eca8; -moz-box-shadow: 0 0 20px black; -webkit-box-shadow: 0 0 20px black; box-shadow: 0 0 20px black; }
 
 
         /*content*/
@@ -171,10 +174,10 @@ h1{
                 <ul>            
                 <div class="open_button cursive green">Here is detailed report of your investments portfolio:</div>            
                     <div class="hd">                        
-                        <li>Stocks &nbsp &nbsp +37% </li>
-                        <li>Mutual Funds &nbsp &nbsp +29%</li>
-                        <!-- <li>Gold &nbsp &nbsp +3%</li> -->
-                        <li>Bank FD's &nbsp No change</li>
+                        <li>Stocks {{prtf.stocks}} (+37%) </li>
+                        <li>Mutual {{prtf.mutual_funds}} (+29%)</li>
+                        <li>Gold {{prtf.gold}} (+1%)</li>
+                        <li>Bank FD's {{prtf.fds}} (+5%)</li>
                         <!-- <li>Professional Tax &nbsp -Rs 4500</li> -->
                         <!-- <li>Loan &nbsp&nbsp Rs 000</li>  -->
                         <!-- <li>Total &nbsp&nbsp Rs 51000</li>                    -->
@@ -211,8 +214,18 @@ h1{
                     <button type="button" class="ta open_button btn btn-dark"><a href="Investment.html#famous">Famous People</a></button>
                     </h3> 
                 </div><br><br>
-                <div class="text-center ">
-                <button type="button" class="btn btn-dark"><a href="last.html">NEXT</a></button>
+                <div class="text-center">
+                    <form action="withdraw" method="POST">
+                        {% csrf_token %}
+                        <input type="submit" value="Withdraw" name="withdraw">
+                    </form>
+                </div>
+    
+                <div class="text-center">
+                    <form action="invest" method="POST">
+                        {% csrf_token %}
+                        <input type="submit" value="Invest" name="invest">
+                    </form>
                 </div>
 
         </div>
